select job site and date page responsive reserve success page ui empty shopping cart faq ui header dropdown issues fixed

--- a/src/app/equipment-reserve-success/equipment.reserve-success.html
+++ b/src/app/equipment-reserve-success/equipment.reserve-success.html
@@ -4,72 +4,73 @@
     <div class="container">
       <!-- START  Request Confirmation -->
       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 sell-main-part">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 req_job_tit nopadding reserve-success-heading req-confirm">Request Confirmation</div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 req_job_tit nopadding reserve-success-heading req-confirm heading-text">Request Confirmation</div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right nopadding req-confirm">
-          <button type="button" class="btn sign_mybtn all-btn primary-btn">Print Order Details</button>
+          <button type="button" class="btn sign_mybtn all-btn primary-btn reserve-success-btn">Print Order Details</button>
+          <a type="button" class="btn sign_mybtn all-btn primary-btn reserve-success-btn" ui-sref="hm.orderHistory">View Orders</a>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small border-dashed"></div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar nopadding">
-          <p class="theme_clr reserve-success-heading">
+          <p class="theme_clr reserve-success-heading heading-text">
             Thank You. Your (request) has been received and we have sent you a copy of this
             request on your email address
           </p>
-          <p class="comferm_email_tex reserve-success-heading">
+          <p class="comferm_email_tex reserve-success-heading desc-text">
             A confirmation email will be sent you once your (request) is processed.
           </p>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit reserve-success-heading">Order Details</h3>
+          <h3 class="req_job_tit reserve-success-heading heading-text">Order Details</h3>
           <table class="table req_tab reserve-success-heading">
 
             <tbody>
             <tr>
-              <td class="req_tabal_lf">Request ID: </td>
-              <td>5784-BD245</td>
+              <td class="req_tabal_lf desc-text">Request ID: </td>
+              <td class="desc-text">5784-BD245</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf">Full Name:  </td>
-              <td>Hemag Brosnan</td>
+              <td class="req_tabal_lf desc-text">Full Name:  </td>
+              <td class="desc-text">Hemag Brosnan</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf">Email Address:  </td>
-              <td>john@doe.com</td>
+              <td class="req_tabal_lf desc-text">Email Address:  </td>
+              <td class="desc-text">john@doe.com</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf">Job Site Address:   </td>
-              <td>353 Third Floor Avenue</td>
+              <td class="req_tabal_lf desc-text">Job Site Address:   </td>
+              <td class="desc-text">353 Third Floor Avenue</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf">City:  </td>
-              <td>Washington DC Area</td>
+              <td class="req_tabal_lf desc-text">City:  </td>
+              <td class="desc-text">Washington DC Area</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf">ZIP Code:  </td>
-              <td>23308</td>
+              <td class="req_tabal_lf desc-text">ZIP Code:  </td>
+              <td class="desc-text">23308</td>
 
             </tr>
             </tbody>
           </table>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit reserve-success-heading">Payments</h3>
-          <p class="comferm_email_tex reserve-success-heading">
+          <h3 class="req_job_tit reserve-success-heading heading-text">Payments</h3>
+          <p class="comferm_email_tex reserve-success-heading desc-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr reserve-success-heading">
+          <p class="theme_clr reserve-success-heading desc-text">
             Payment is made by E-check (ACH)
           </p>
           <hr class="req_dash_botam">
-          <h3 class="req_job_tit reserve-success-heading">Track Request Status</h3>
-          <p class="comferm_email_tex reserve-success-heading">
+          <h3 class="req_job_tit reserve-success-heading heading-text">Track Request Status</h3>
+          <p class="comferm_email_tex reserve-success-heading desc-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
           </p>
-          <p class="theme_clr reserve-success-heading">
+          <p class="theme_clr reserve-success-heading desc-text">
             Track Here
           </p>
           <hr class="req_dash_botam">
@@ -86,9 +87,9 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr"><a href="#" class="">help@nobleiron.com</a></p>
+          <p class="help_clr"><a href="#" class="">customercare@nobleiron.com</a></p>
           <p class="skype_tex"><i class="fa fa-phone"></i>
-            1-800-123-HELLO</p>
+            1-855-767-4424</p>
         </div>
         <!-- End  Noble Iron Help -->
         <!-- START  Why Sell with us -->
