--- a/src/app/faq/faq.html
+++ b/src/app/faq/faq.html
@@ -18,7 +18,7 @@
 			<uib-accordion close-others="oneAtATime" class="faq-accordion">
 		    <uib-accordion-group>
 		      <uib-accordion-heading>
-		      	<h4 class="heading-text">
+		      	<h4 class="go-back-text">
 		        	What does Noble Iron Offer?
 		        	
 		      	</h4>
@@ -29,7 +29,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		      <uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Where does Noble Iron offer its rental equipment?
 		        	
 		        </h4>
@@ -40,7 +40,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		      <uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	What are Noble Iron's business hours?
 		        	
 		        </h4>
@@ -57,7 +57,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		      <uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Does Noble Iron offer a same day delivery?
 		        	
 		        </h4>
@@ -68,7 +68,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		      <uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	How do I cancel my order? Can I set up auto termination?
 		        	
 		        </h4>
@@ -82,7 +82,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Do you guarantee delivery time?
 		        	
 		        </h4>
@@ -93,7 +93,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	How Long is each rental period?
 		        	
 		        </h4>
@@ -109,7 +109,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	If my rental equipment is dropped off at 10 AM for a one day rental, how long do I have to use the equipment?
 		        	
 		        </h4>
@@ -120,7 +120,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	When will my equipment be picked up?
 		        	
 		        </h4>
@@ -131,7 +131,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Is the rental price listed on the website the total price?
 		        	
 		        </h4>
@@ -142,7 +142,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Is fuel included?
 		        	
 		        </h4>
@@ -153,7 +153,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Am I responsible for damages?
 		        	
 		        </h4>
@@ -164,7 +164,7 @@
 		    </uib-accordion-group>
 		    <uib-accordion-group>
 		    	<uib-accordion-heading>
-		        <h4 class="heading-text">
+		        <h4 class="go-back-text">
 		        	Can I pick-up or drop off the equipment myself?
 		        	
 		        </h4>
