--- a/src/app/jobsite-rent/jobsite-rent.html
+++ b/src/app/jobsite-rent/jobsite-rent.html
@@ -110,13 +110,13 @@
 				<button class="btn sign_mybtn all-btn primary-btn">Update</button>
 			</div> -->
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn site-btn-div">
-				<button class="btn sell-equ all-btn" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
+				<button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
 					Continue Renting
 				</button>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn site-btn-div">
 				<a href="#" class="btn sign_mybtn all-btn primary-btn cont ">Continue</a>
-				<button class="btn sign_mybtn all-btn primary-btn reser-now">Reserve Now</button>
+				<button class="btn sign_mybtn all-btn primary-btn reser-now cont">Reserve Now</button>
 			</div>
 		</div>
 
@@ -166,7 +166,6 @@
 			<div class="row nomargin">
 				<div class="col-md-12 site-col">
 					<button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
-					<button class="btn sell-equ all-btn" ng-click="$dismiss()">Cancel</button>
 				</div>
 			</div>
 		</div>
