--- a/src/app/shopping-cart/shopping-cart.html
+++ b/src/app/shopping-cart/shopping-cart.html
@@ -170,7 +170,7 @@
 			<!-- empty cart -->
 			<div ng-show="!cart" class="pull-center">
 				<h3 class="heading-text cart-empty pull-center">
-			  	Your Cart is empty!. Click go back to search and add products to your cart.
+			  	Sorry! No Items in Cart.
 				</h3>
 				<button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
 					Continue Renting
