--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -7,7 +7,7 @@
         DASHBOARD
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small">
-        <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span>
+        <a href="#/" class="dash_board_light invoice-no">Home </a>/ <span class="dash_board_bold">Dashboard</span>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box job-ste-box-small">
@@ -15,27 +15,24 @@
           <li>
             <div class="job-num-div">
               <span class="number-job">34</span>
-                                            <span class="flot-right job-ste-box_icon">
-                                                <i class="fa fa-heart job-ste-box_icon"></i>
-                                            </span>
+              <span class="flot-right job-ste-box_icon">
+                <i class="fa fa-heart job-ste-box_icon"></i>
+              </span>
             </div>
             <div class="cat-product">
               <span class="cat-span">Catalog Products</span>
-                                            <span>
-                                                <i class="fa fa-angle-right flot-right right-arrw"></i>
-
-
-                                            </span>
+              <span>
+                <i class="fa fa-angle-right flot-right right-arrw"></i>
+              </span>
             </div>
 
           </li>
           <li>
             <div class="job-num-div">
               <span class="number-job">12</span>
-                                            <span class="flot-right job-ste-box_icon">
-
-                                                <i class="fa fa-map-marker job-ste-box_icon"></i>
-                                            </span>
+              <span class="flot-right job-ste-box_icon">
+                <i class="fa fa-map-marker job-ste-box_icon"></i>
+              </span>
             </div>
             <div class="cat-product">
               <span class="cat-span">Job Sites</span>
