--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -47,7 +47,7 @@
               My Catalog
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
-              <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Catalog</span>
+              <a class="dash_board_light invoice-no" href="#/">Home </a>/ <span class="dash_board_bold">Catalog</span>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
             <div class="col-md-4 lift_box nopadding">
