--- a/src/app/jobsite-rent/jobsite-rent.html
+++ b/src/app/jobsite-rent/jobsite-rent.html
@@ -106,15 +106,15 @@
 					<i class="fa fa-clock-o"></i>
 				</div>
 			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div">
-				<textarea class="form-control desc-text special-instruction">Special Instructions</textarea>
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 special-instruction heading-border">
+				<textarea class="form-control desc-text">Special Instructions</textarea>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn site-btn-div">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 cont-rent-btn ">
 				<button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
 					Continue Renting
 				</button>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn site-btn-div">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
 				<a href="#" class="btn sign_mybtn all-btn primary-btn cont ">Continue</a>
 				<button class="btn sign_mybtn all-btn primary-btn reser-now cont">Reserve Now</button>
 			</div>
