--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -43,14 +43,46 @@
 		        </div>
 		        <!-- End  Dashboard tab -->
 						<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
 								Quotes
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit job-site-list">
-								<!-- <input type="text" placeholder="Search Quotes" class="form-control pull-right mng-search-bar"> -->
-								<div class="form-control search-div quotes-search">
-									<i class="fa fa-search"></i>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit job-site-list">
+								<i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>
+								<i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
+								<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
 									<input type="text" placeholder="Search">
+								</div>
+							</div>
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
+								<div class="form-control search-div quotes-search searchShow">
+									<input type="text" placeholder="Search">
+								</div>
+							</div>
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box job-site-list quotes-filter-div filter-arrow-box" ng-class="{'filter-show': showFilterDiv}">
+								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+									<p class="desc-text">From Date</p>
+									<div class="form-control search-div select-date">
+										<input type="text" placeholder="dd/mm/yyyy" ng-model="fromDate">
+										<i class="fa fa-calendar"></i>
+									</div>
+								</div>
+								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+									<p class="desc-text">To Date</p>
+									<div class="form-control search-div select-date">
+										<input type="text" placeholder="dd/mm/yyyy" ng-model="toDate">
+										<i class="fa fa-calendar"></i>
+									</div>
+								</div>
+								<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+									<p class="desc-text">Job Site</p>
+									<div class="form-control search-div select-date">
+										<input type="text" placeholder="Enter Jobsite Keyword" ng-model="jobsite">
+										<i class="fa fa-marker"></i>
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 site-btn-div text-right devider">
+									<button class="btn sign_mybtn all-btn primary-btn filter-btns">Apply</button>
+									<button class="btn sign_mybtn all-btn primary-btn filter-btns" ng-click="reset()">Reset</button>
 								</div>
 							</div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="devider"></div>
