--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -1793,10 +1793,61 @@ button:hover {
 }
 
 .quotes-search {
-	width: 70%;
-	float: right;
+	/*width: 70%;
+	float: right;*/
+	width: 0;
+  min-width: 0;
+  overflow: hidden;
+  padding: 0;
+  border-width: 0;
 	text-align: left;
-	min-width: 300px;
+	transition: all 0.9 ease;
+}
+
+.search-filter-icon {
+	margin-right: 10px;
+	margin-top: 10px;
+	cursor: pointer;
+}
+
+.searchShow {
+	width: 93%;
+	/*min-width: 300px;*/
+	overflow: visible;
+	border-width: 1px;
+	padding: 6px 12px;
+	transition: width 0.9s ease;
+}
+
+.quotes-filter-div {
+	box-shadow: 0 0 5px;
+  padding: 10px;
+  position: absolute;
+  top: 40px;
+  background-color: #fff;
+  z-index: 1;
+  display: none;
+  width: 96%;
+}
+
+.filter-show {
+	display: block;
+}
+
+.filter-arrow-box:after, .filter-arrow-box:before {
+	left: 100% !important;
+}
+
+.search-arrow-box:after, .search-arrow-box:before {
+	left: 95% !important;
+}
+
+.quotes-filter-div .select-date {
+	width: 100%;
+}
+
+.search-box-xs {
+	display: none;
 }
 
 /*quotes-detail*/
