--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -72,7 +72,7 @@
 
         <form class="navbar-form my-search-nav" role="search">
 
-          <input type="text" class="form-control search-head-without" name="q" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedProduct"
+          <input type="text" class="form-control search-head-without" name="q" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-change="showAutocomplete = true" ng-model="selectedProduct"
                  typeahead="item as item.Product_Name for item in getProducts($viewValue)"
                  typeahead-on-select="selectSearchedItem($item, $model, $label)"
                  typeahead-template-url="typeahead-item.html">
