dashboard ui changes shopping cart icon on prelogin with responsive ui changes

--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -64,7 +64,7 @@
 
         </ul>
       </div>
-      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12  upcoming upcoming-small">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12  upcoming upcoming-small upcoming-left">
         <h4 class="upcoming-title">Upcoming Reservations
           <i class="fa fa-angle-right  fa-2x flot-right upcom-arrow"></i></h4>
         <div class="upcome_eqe">
