--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -234,7 +234,7 @@
     display: block;
     padding-bottom: 15px;
   }
-
+\
 }
 
 @media screen and (max-width: 600px) {
@@ -727,6 +727,11 @@
   .quotes-filter-div .search-div input {
     width: 85%;
   }
+
+  .not-user-div .cart_noti {
+    right: 10px;
+    top: 4px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -888,6 +893,10 @@
 
   .quotes-filter-div {
     width: 92%;
+  }
+  .not-user-div .cart_noti {
+    right: -8px;
+    top: 10px;
   }
 }
 
