--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -50,7 +50,7 @@
 								<i class="fa fa-filter marker pull-right heading-text search-filter-icon" ng-click="filter()"></i>
 								<i class="fa fa-search marker pull-right heading-text search-filter-icon" ng-click="search()"></i>
 								<div class="form-control search-div quotes-search hidden-xs" ng-class="{'searchShow': showSearch}">
-									<input type="text" placeholder="Search">
+									<input type="text" placeholder="Quote Id">
 								</div>
 							</div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 arrow_box search-box-xs job-site-list quotes-filter-div search-arrow-box" ng-class="{'search-show': showSearch}">
